--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     <div class="header-content">
       <h1>Ashok Machinery Store</h1>
       <p class="owner">Owner: Ashok Chaudhary</p>
-      <p>Email: ashokchaudhary.com | Phone: +91-9935460655,9454047706</p>
-      <p class="address">Address: Near LIC Office sugar mill road, Khalilabd, Uttar Pradesh - 272175</p>
-      <p class="dealers">Dealer of: <strong>Ashok Leyland</strong>, <strong>Eicher</strong>, <strong>CG Pumps</strong></p>
+      <p class="contact-info">
+        <span>Email: ashokchaudhary.com</span>
+        <span>Phone: +91-9935460655, 9454047706</span>
+      </p>
+      <p class="address">Address: Near LIC Office, Sugar Mill Road, Khalilabad, Uttar Pradesh - 272175</p>
+      <p class="dealers">
+        Dealer of: <strong>Ashok Leyland</strong>, <strong>Eicher</strong>, <strong>CG Pumps</strong>
+      </p>
     </div>
   </header>
+  
   
 
   <main>
